--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Fino Basri\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3465563992.properties
+deploy.ant.properties.file=/Users/arkan481/Library/Application Support/NetBeans/12.0/config/GlassFishEE6/Properties/gfv3327452998.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Fino Basri/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files (x86)/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-4.1.1\\glassfish;C:\\Program Files (x86)\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files (x86)/glassfish-4.1.1
+j2ee.server.domain=/Users/arkan481/glassfish4.1/glassfish/domains/domain1
+j2ee.server.home=/Users/arkan481/glassfish4.1/glassfish
+j2ee.server.instance=[/Users/arkan481/glassfish4.1/glassfish:/Users/arkan481/glassfish4.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/Users/arkan481/glassfish4.1
 user.properties.file=C:\\Users\\Fino Basri\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
