--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ j2ee.server.domain=/Users/arkan481/glassfish4.1/glassfish/domains/domain1
 j2ee.server.home=/Users/arkan481/glassfish4.1/glassfish
 j2ee.server.instance=[/Users/arkan481/glassfish4.1/glassfish:/Users/arkan481/glassfish4.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/Users/arkan481/glassfish4.1
-user.properties.file=C:\\Users\\Fino Basri\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/arkan481/Library/Application Support/NetBeans/12.0/build.properties
